fix: made the mobile view harmbuger menu icon to align well and then worked on the pagination logic to show current page number as active

--- a/components/dashboard/Topbar.module.scss
+++ b/components/dashboard/Topbar.module.scss
@@ -43,6 +43,7 @@
       color: $dark-blue;
       cursor: pointer;
       padding: 5px;
+      margin-top: -5px;
       z-index: 1100;
       position: relative;
       pointer-events: all;
